Update README with more comprehensive feature details and repository information